objects/ACE_SKU_Changes_inbound__c.object
<CustomObject>
    <description>Price Change Process UI - This is a staging Object for quarterly inbound data flow</description>
    <fields>
        <fullName>Addition_communication_requirements__c</fullName>
        <label>Addition_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Start_Date__c</fullName>
        <label>Agreement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BlockduplicateEntries__c</fullName>
        <description>batchId__c+Owning_Customer_ID__c+CoreList_ID__c+SKU__c</description>
        <label>BlockduplicateEntries</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cap_Amount__c</fullName>
        <label>Cap Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Calculation_Base__c</fullName>
        <label>Cap Calculation Base</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Format__c</fullName>
        <label>Cap Format</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_12_Month__c</fullName>
        <label>Cap Lost Margin Dollar $ 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_3_Month__c</fullName>
        <label>Cap Lost Margin Dollar $ 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar_6_Month__c</fullName>
        <label>Cap Lost Margin Dollar $ 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Lost_Margin_Dollar__c</fullName>
        <label>Cap Lost Margin Dollar $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cap_Scope__c</fullName>
        <label>Cap Scope</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cap_Units__c</fullName>
        <label>Cap Units</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Description__c</fullName>
        <label>Class Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Id__c</fullName>
        <description>SKU Merch Hierarchy? - Yes</description>
        <label>Class Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comp_Vetting_Not_Performed__c</fullName>
        <label>Comp_Vetting_Not_Performed</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complex_Cap__c</fullName>
        <label>Complex_Cap</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_ID__c</fullName>
        <description>Vendavo Corelist.VNumber</description>
        <label>CoreList ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_Indicator__c</fullName>
        <label>CoreList Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoreList_Type__c</fullName>
        <description>Either
C = Custom Core
S = Standard Core</description>
        <label>CoreList Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Description__c</fullName>
        <description>Vendavo Corelist.Description</description>
        <label>Core Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_s_SKU_Vendor_ID__c</fullName>
        <label>Core’s SKU Vendor ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_s_SKU_Vendor_Name__c</fullName>
        <label>Core’s SKU Vendor Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Change_From_Date__c</fullName>
        <label>Cost Change From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Change_To_Date__c</fullName>
        <label>Cost Change To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_List_Price__c</fullName>
        <label>Current List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Margin_12_Month__c</fullName>
        <label>Current Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Margin_3_Month__c</fullName>
        <label>Current Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Margin_6_Month__c</fullName>
        <label>Current Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Margin__c</fullName>
        <label>Current Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Price_Method__c</fullName>
        <description>Price Method at SKU Level Values:
•         Fixed Price
•         DFZ
•         Cost
•         DFL</description>
        <label>Current Price Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Sell_Price__c</fullName>
        <label>Current Sell Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_WANET_Cost__c</fullName>
        <label>Current WANET Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_WAPO_Cost__c</fullName>
        <label>Current WAPO Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_WATD_Cost__c</fullName>
        <label>Current WATD Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Notification_Date__c</fullName>
        <label>Customer Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customers_Linked__c</fullName>
        <description>Vendavo
Cplpriorityhandle_v
Bidagreement
Vvalidity_from
Vvalidity_to
Delete = &apos;F&apos;</description>
        <label>Customers Linked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DISCO_communication_requirements__c</fullName>
        <label>DISCO_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deletion_communication_requirements__c</fullName>
        <label>Deletion_communication_requirements</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Description__c</fullName>
        <label>Dept Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Id__c</fullName>
        <label>Dept Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Description__c</fullName>
        <label>Division Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Id__c</fullName>
        <label>Division Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_Language__c</fullName>
        <label>Effective_Date_Language</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_12_Month__c</fullName>
        <label>Forecasted Spend 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_3_Month__c</fullName>
        <label>Forecasted Spend 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecasted_Spend_6_Month__c</fullName>
        <label>Forecasted Spend 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gross_IGM_Basis_Point_Increase__c</fullName>
        <label>Gross IGM Basis Point Increase</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <label>Group Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Id__c</fullName>
        <label>Group Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_Catalog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To capture hosted catalog requirement</description>
        <label>Hosted Catalog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Price_Freeze_Period__c</fullName>
        <label>Initial Price Freeze Period</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <description>YES/NO - YES IF PROSSED</description>
        <label>IsProcessed</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Cap_Lesser_Of_Two__c</fullName>
        <label>Is_Cap_Lesser_Of_Two</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_There_A_Cap__c</fullName>
        <label>Is_There_A_Cap</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Qty__c</fullName>
        <description>Accumulated SKU Sold Qty for this Core, Last 12 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 12 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_12_Month_Sales__c</fullName>
        <description>Vendavo PA</description>
        <label>Item 12 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Qty__c</fullName>
        <description>Accumulated SKU Sold Qty for this Core, Last 3 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 3 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_3_Month_Sales__c</fullName>
        <description>Accumulated SKU Sales for this Core, Last 3 calendar months from current date</description>
        <label>Item 3 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Qty__c</fullName>
        <description>Accumulated SKU Sold Qty for this Core, Last 6 calendar months from current date
Same Time Period as of Sales</description>
        <label>Item 6 Month Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_6_Month_Sales__c</fullName>
        <description>Vendavo PA</description>
        <label>Item 6 Month Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_12_Month__c</fullName>
        <label>Margin Exposure 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_3_Month__c</fullName>
        <label>Margin Exposure 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_6_Month__c</fullName>
        <label>Margin Exposure 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Exposure_before_change__c</fullName>
        <label>Margin Exposure (before change)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Play_Type__c</fullName>
        <label>Margin Play Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WAPO__c</fullName>
        <label>Margin % wo/ Change WAPO</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_wo_Change_WATD__c</fullName>
        <label>Margin % wo/ Change WATD</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NWCustomer_Notification_Flag__c</fullName>
        <label>NWCustomer Notification Flag</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM1__c</fullName>
        <label>New Gross IGM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Gross_IGM__c</fullName>
        <label>New Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_IGM_Change__c</fullName>
        <label>New IGM $ Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_List_Price__c</fullName>
        <label>New List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Dollar_Change_Amount__c</fullName>
        <label>New Sell Price Dollar $ Change Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Sell_Price_Percentage_Change_Amoun__c</fullName>
        <label>New Sell Price Percentage % Change Amoun</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_WANET_Cost__c</fullName>
        <label>New WANET Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_WAPO_Cost_Effective_Date__c</fullName>
        <label>New WAPO Cost Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_WAPO_Cost__c</fullName>
        <label>New WAPO Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_WATD_Cost__c</fullName>
        <label>New WATD Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_eligible_increase_date__c</fullName>
        <label>Next eligible increase date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Action__c</fullName>
        <label>Notification Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM1__c</fullName>
        <label>Old Gross IGM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Gross_IGM__c</fullName>
        <label>Old Gross IGM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WANET__c</fullName>
        <label>Old WANET</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin1__c</fullName>
        <label>Old WAPO Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WAPO_Margin__c</fullName>
        <label>Old WAPO Margin %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WAPO__c</fullName>
        <label>Old WAPO</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM1__c</fullName>
        <label>Old WATD SRM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WATD_SRM__c</fullName>
        <label>Old WATD SRM %</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_WATD__c</fullName>
        <label>Old WATD</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Annual_Sales_Volume__c</fullName>
        <label>Owning Customer Annual Sales Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Corelist_Priority__c</fullName>
        <label>Owning Customer Corelist Priority</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_ID2__c</fullName>
        <label>Owning Customer ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_ID__c</fullName>
        <formula>IF(Owning_Customer_ID2__c = null,&apos;99999ACE&apos;,Owning_Customer_ID2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owning Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Legal__c</fullName>
        <description>Vendavo
Corelist
SpecialHandling</description>
        <label>Owning Customer Legal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Name__c</fullName>
        <label>Owning Customer Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Customer_Type__c</fullName>
        <label>Owning Customer Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE_NOT_CALCULATED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is set to true if ACE is unable to VET a price</description>
        <label>PRICE NOT CALCULATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Changes_Type__c</fullName>
        <label>Price Changes Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Method_Percentage__c</fullName>
        <description>Vendavo
Corelistlineitem
Coreadjusted_amount</description>
        <label>Pricing Method Percentage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_12_Month__c</fullName>
        <label>Projected Margin 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_3_Month__c</fullName>
        <label>Projected Margin 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Margin_6_Month__c</fullName>
        <label>Projected Margin 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Margin__c</fullName>
        <label>Projected Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_New_List_Less_Disc_Without_Cap__c</fullName>
        <label>Proposed New List Less Disc% Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_Without_Cap__c</fullName>
        <label>Proposed Price Without Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Price_with_Cap__c</fullName>
        <label>Proposed Price with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap1__c</fullName>
        <label>Proposed SRM $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_SRM_with_Cap__c</fullName>
        <label>Proposed SRM% with Cap</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap1__c</fullName>
        <label>Proposed WAPO Margin $ with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_WAPO_Margin_with_Cap__c</fullName>
        <label>Proposed WAPO Margin % with Cap</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPU__c</fullName>
        <label>QPU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Action__c</fullName>
        <label>Recommended Action</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_Deletion__c</fullName>
        <label>Recommended Deletion</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contract_Number__c</fullName>
        <label>Related_Contract_Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Customer__c</fullName>
        <label>Related_Customer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Pricing_Term__c</fullName>
        <label>Related_Pricing_Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Key__c</fullName>
        <label>Request Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Window__c</fullName>
        <label>Requirement Window</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retail_Price__c</fullName>
        <label>Retail_Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Object_Customer_ID__c</fullName>
        <label>SFDC Contract Object Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Contract_Object_ID__c</fullName>
        <label>SFDC Contract Object ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Notification_Flag__c</fullName>
        <label>SFDC Notification Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Add_Notif_Req__c</fullName>
        <label>SKU Add Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Alt__c</fullName>
        <label>SKU Alt</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_DISCO_Alternate_Price_Requirement__c</fullName>
        <label>SKU DISCO Alternate Price Requirement</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Del_Notif_Req__c</fullName>
        <label>SKU Del Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Description__c</fullName>
        <description>Vendavo: v_vproduct.vlabel
RMS 
Item_master. short_desc</description>
        <label>SKU Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Disco_Alt_Req__c</fullName>
        <label>SKU Disco Alt Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Disco_Cust_Notif_Req__c</fullName>
        <label>SKU Disco Cust Notif Req</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Governed_By_Active_Written_Agreement__c</fullName>
        <label>SKU_Governed_By_Active_Written_Agreement</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Last_Update__c</fullName>
        <description>Last time the SKU price was changed</description>
        <label>SKU Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>Select SKU Assortment</description>
        <label>SKU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRM_Basis_Point_Increase__c</fullName>
        <label>SRM Basis Point Increase</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SRM_Differential__c</fullName>
        <label>SRM Differential $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price_Change_Effective_Date__c</fullName>
        <label>Sales Price Change Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subclass_Description__c</fullName>
        <label>Subclass Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subclass_Id__c</fullName>
        <label>Subclass Id</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA__c</fullName>
        <label>Total Amount not passed due to WA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr1__c</fullName>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr2__c</fullName>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restr3__c</fullName>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_not_passed_due_to_WA_restri__c</fullName>
        <label>Total Amount not passed due to WA restri</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_12_Month__c</fullName>
        <label>Total Spend Impact 12 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_3_Month__c</fullName>
        <label>Total Spend Impact 3 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Spend_Impact_6_Month__c</fullName>
        <label>Total Spend Impact 6 Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Vendavo: v_vproduct.baseuom_vname
RMS
Item_master. standard_uom</description>
        <label>UOM</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Calendar_Period__c</fullName>
        <label>Update_Frequency_Calendar_Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_1__c</fullName>
        <label>Update_Frequency_Date_1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_2__c</fullName>
        <label>Update_Frequency_Date_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Date_3__c</fullName>
        <label>Update_Frequency_Date_3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_In_Days__c</fullName>
        <label>Update_Frequency_In_Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Other__c</fullName>
        <label>Update_Frequency_Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency_Type__c</fullName>
        <label>Update_Frequency_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Frequency__c</fullName>
        <label>Update Frequency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Timing_Action__c</fullName>
        <label>Update Timing Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Timing__c</fullName>
        <label>Update Timing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VCC_ENGINE_CONTROL_ID__c</fullName>
        <label>VCC ENGINE CONTROL ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Letter_Eligible_No_Det__c</fullName>
        <label>Vendor_Letter_Eligible_No_Det</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_OEM_Letters_Required__c</fullName>
        <label>Vendor/OEM Letters Required</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAPO_Cost_Change__c</fullName>
        <label>WAPO Cost % Change</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change1__c</fullName>
        <label>WATD Cost $ Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WATD_Cost_Change__c</fullName>
        <label>WATD Cost % Change</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>XREF_REQUEST_ID__c</fullName>
        <label>XREF_REQUEST_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>batchId__c</fullName>
        <defaultValue>$Setup.ACE_Settings__c.BatchName__c</defaultValue>
        <label>batchId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>error__c</fullName>
        <label>error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACE_SKU_Changes_inbound</label>
    <nameField>
        <label>ACE_SKU_Changes_inbound Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACE_SKU_Changes_inbound</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>